# ws-hb-game

./: .gitignore  LICENSE  README.md
client/: index.html  package-lock.json  package.json
client/src/: index.js  utils.js
client/src/components/: CreateGamePage.jsx  GamePage.jsx  JoinGamePage.jsx
client/src/styles/: index.scss
js-server/: package-lock.json  package.json
js-server/src/: server.ts
py-server/: gameid.py  main.py  pyproject.toml  utils.py
py-server/templates/: index.html
