[tool.poetry]
name = "ws-hb-py-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.0"
flask = "^1.1.2"
flask_socketio = "^4.3.0"
attrs = "^19.3.0"
gunicorn = "^20.0.4"
uvicorn = "^0.11.5"
fastapi = "^0.58.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^2.0.1"}
databases = {extras = ["sqlite"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
